Bug 94259 - FILEOPEN XLS Charts are vertically squashed
Summary: FILEOPEN XLS Charts are vertically squashed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords: bibisected, filter:xls, regression
Depends on:
Blocks: XLS
  Show dependency treegraph
 
Reported: 2015-09-16 08:37 UTC by Geert Closius
Modified: 2025-08-14 10:21 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Calculation of commercial-technical parameters of biogas factorys (281.00 KB, application/vnd.ms-excel)
2015-09-16 08:37 UTC, Geert Closius
Details
Screenshot of document in Excel 2007 (109.30 KB, image/png)
2015-09-16 09:41 UTC, Stephan van den Akker
Details
comparison MSO 2010 and LibreOffice 6.3 Master (296.61 KB, image/png)
2019-05-14 13:36 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Geert Closius 2015-09-16 08:37:57 UTC
Created attachment 118759 [details]
Calculation of commercial-technical  parameters of biogas factorys

X-Y-Graphic in Excel File are shown wrong in version 4.4, 4.5, 5.01
Please have a look to the enclosed Excel file with Excel and LibreOffice
kind regards
Geert Closius
Comment 1 raal 2015-09-16 09:02:26 UTC
Please attach printscreen from excel, thank you
Comment 2 Stephan van den Akker 2015-09-16 09:41:48 UTC
Created attachment 118764 [details]
Screenshot of document in Excel 2007

Tested in Calc Version: 5.0.2.1.0+, Build ID: 00m0(Build:1), Locale: en-GB (en_GB.UTF-8) on openSuSE 13.1 (64-bit).

Observations of things going wrong in Calc:
-Graphs are squashed vertically to about half the height, exposing a blue background square.
- X axis titles are misplaced
- Several "enclosed objects" (excel description) with equations have a blue background, and can not be edited in any way.

To be fair, in excel 2007 on the Windows test machine the enclosed objects can not be edited as well. The equation editor might not be installed on this machine.
Comment 3 Stephan van den Akker 2015-09-16 10:08:40 UTC
Confirmed in LibreOfficeDev MASTER Version: 5.1.0.0.alpha1+, Build ID: 88b6dd3ea77ca9f6d5fac2965cea6ff0634e6ba5, Locale: en-GB (en_GB.UTF-8) on openSuSE 13.1

An additional observation of an import error in Calc (see also comment 2):
- Direct text entries for the Range Name are not imported correctly.

I have observed similar import errors with other XLS files in the past. attachment 118759 [details] is an excellent test case for these.
Comment 4 Stephan van den Akker 2015-09-16 10:14:14 UTC
These errors do not occur in OpenOffice.org 3.3.0 (32-bit) on Windows 7:
- Graphs are not squashed vertically;
- X axis titles are placed correctly;
- No blue backgrounds for graphs and "enclosed objects".

Therefore marking as a regression, possible bibisect candidate.
Comment 5 Xisco Faulí 2016-09-12 12:25:13 UTC
Adding keyword 'bibisectRequest'.
Comment 6 Aron Budea 2016-09-16 05:20:14 UTC
Reproduced with v4.0.0.3 / Ubuntu 16.04, except blue background, that is reproduced with v4.1.0.4. Adjusting version.
Comment 7 Xisco Faulí 2017-09-29 08:50:15 UTC Comment hidden (obsolete)
Comment 8 Buovjaga 2018-05-25 12:28:42 UTC
Still repro, but only the squashing. Multiple issues in one report would be wrong anyway.

Arch Linux 64-bit
Version: 6.1.0.0.alpha1+
Build ID: eeaf6dee2d278eaa037d95a756ad0ffab3314bc2
CPU threads: 8; OS: Linux 4.16; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on May 24th 2018
Comment 9 Buovjaga 2018-06-30 17:17:27 UTC
Bibisected with 43all on Linux to range https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=ae4e4a11d4300f7448cb6bd170fcb034542caddc...4316e643ef345b0f673b4a03a80a4b7cb3185588

I am unable to locate a suspicious commit.
Comment 10 Buovjaga 2018-07-03 18:00:40 UTC
Did detective work in the range: https://wiki.documentfoundation.org/QA/Bibisect#Doing_detective_work_inside_a_commit_range

Maybe it is this mega-commit: https://cgit.freedesktop.org/libreoffice/core/commit/?id=44cfc7cb6533d827fd2d6e586d92c61d7d7f7a70

It has "fix for #118525#: Using primitives for chart sub-geometry visualisation"
Comment 11 Xisco Faulí 2019-05-14 13:36:40 UTC
Created attachment 151406 [details]
comparison MSO 2010 and LibreOffice 6.3 Master
Comment 12 Xisco Faulí 2019-05-14 13:37:00 UTC
Still reproducible in

Version: 6.3.0.0.alpha0+
Build ID: 630db80d17616d635cf2e5f1d5a0852428b794a3
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 13 QA Administrators 2021-05-14 04:13:00 UTC Comment hidden (obsolete)
Comment 14 QA Administrators 2023-05-15 03:17:57 UTC Comment hidden (obsolete)
Comment 15 QA Administrators 2025-05-15 03:13:01 UTC Comment hidden (obsolete)
Comment 16 Markus Mohrhard 2025-08-13 20:54:51 UTC
This is caused by trying to use the chart2 view information in the import filter. I have a fix for this regression but there are still a few small positioning differences between Calc and Excel.

This needs another issue at some point with a number of test documents.
Comment 17 Commit Notification 2025-08-14 07:11:29 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0bfca02bf492ec917633388aa01421a1e0dad31a

tdf#94259: don't use the non-existed chart view during import

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2025-08-14 10:21:00 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/18b40b3964f9fc658abbb6cee1d6401842ffe36c

tdf#94259: don't use the non-existed chart view during import

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.