sc/source/filter/excel/xichart.cxx
@@ -1206,22 +1206,21 @@ void XclImpChText::ConvertTitlePosition( const XclChTextKey& rTitleKey ) const
     try
     {
         Reference< XShape > xTitleShape( GetTitleShape( rTitleKey ), UNO_SET_THROW );
-        // the call to XShape.getSize() may recalc the chart view
-        css::awt::Size aTitleSize = xTitleShape->getSize();
         // rotated titles need special handling...
         Degree100 nScRot = XclTools::GetScRotation( GetRotation(), 0_deg100 );
         double fRad = toRadians(nScRot);
         double fSin = fabs( sin( fRad ) );
         // calculate the title position from the values in the CHTEXT record
-        css::awt::Point aTitlePos(
-            CalcHmmFromChartX( maData.maRect.mnX ),
-            CalcHmmFromChartY( maData.maRect.mnY ) );
-        // add part of height to X direction, if title is rotated down (clockwise)
+        css::awt::Rectangle aTitleRect = CalcHmmFromChartRect(maData.maRect);
+        css::awt::Point aTitlePos(aTitleRect.X, aTitleRect.Y);
+        // add part of width to X direction, if title is rotated down (clockwise)
         if( nScRot > 18000_deg100 )
-            aTitlePos.X += static_cast< sal_Int32 >( fSin * aTitleSize.Height + 0.5 );
-        // add part of width to Y direction, if title is rotated up (counterclockwise)
+        {
+            aTitlePos.X += static_cast< sal_Int32 >( fSin * aTitleRect.Width + 0.5 );
+        }
+        // add part of height to Y direction, if title is rotated up (counterclockwise)
         else if( nScRot > 0_deg100 )
-            aTitlePos.Y += static_cast< sal_Int32 >( fSin * aTitleSize.Width + 0.5 );
+            aTitlePos.Y += static_cast< sal_Int32 >( fSin * aTitleRect.Height + 0.5 );
         // set the resulting position at the title shape
         xTitleShape->setPosition( aTitlePos );
     }
